--- a/pom.xml
+++ b/pom.xml
@@ -77,7 +77,12 @@
             <artifactId>lombok</artifactId>
         </dependency>
 
-
+<!--Generate pdf file, using the api library-->
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itextpdf</artifactId>
+            <version>5.5.13.2</version>
+        </dependency>
     </dependencies>
 
     <build>
