--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,14 @@ spring.mvc.view.prefix=/WEB-INF/jsps/
 spring.mvc.view.suffix=.jsp
 
 server.servlet.context-path=/flights
+
+#spring mail related configuration
+spring.mail.host=smtp.gmail.com
+spring.mail.username=${EMAIL}
+spring.mail.password=${E_PASS}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.port=587
+spring.mail.properties.smtp.timeout=5000;
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+
