finished flight microservice app

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,7 @@ spring.mvc.view.prefix=/WEB-INF/jsps/
 spring.mvc.view.suffix=.jsp
 
 server.servlet.context-path=/flights
+server.port=8080
 
 #spring mail related configuration
 spring.mail.host=smtp.gmail.com
@@ -24,5 +25,3 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.port=587
 spring.mail.properties.smtp.timeout=5000;
 spring.mail.properties.mail.smtp.starttls.enable=true
-
-
